<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".addDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameTextField_"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:startIconDrawable="@drawable/person_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameTextField_"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:startIconDrawable="@drawable/person_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/age_"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:inputType="number" />


            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:weightSum="2"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/height_"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/height"
                        android:inputType="number" />


                </com.google.android.material.textfield.TextInputLayout>


                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    ></Space>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/weight_"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/weight"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/gender"
                android:textSize="15dp" />

            <RadioGroup
                android:id="@+id/genderRadioButtonGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_border"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Female" />

                <RadioButton
                    android:id="@+id/otherRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Other" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Visibility issues"
                android:textSize="15dp" />



            <RadioGroup
                android:id="@+id/visibilityIssueRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_border"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

            <RadioButton
                android:id="@+id/yesVisibilityIssue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="YES" />

            <RadioButton
                android:id="@+id/noVisibilityIssue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="NO" />
            </RadioGroup>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Physically handicaped"
                android:textSize="15dp" />



            <RadioGroup
                android:id="@+id/physicallyHandicappedRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_border"
                android:orientation="horizontal"
                android:padding="10dp"
                android:tooltipText="are you physically handicapped"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/noPhysicallyHandicapped"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="NO" />

                <RadioButton
                    android:id="@+id/upperBodyHandicapped"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="Upper Body" />

                <RadioButton
                    android:id="@+id/lowerBodyHandicapped"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="Lower body" />
            </RadioGroup>


            <Button
                android:id="@+id/profileSaveButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="15dp"
                android:text="@string/Save" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>